--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Industrious by TEMPLATED</title>
+		<title>KULINACS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -35,9 +35,9 @@
 		<!-- Banner -->
 			<section id="banner">
 				<div class="inner">
-					<h1>Industrious</h1>
-					<p>A responsive business oriented template with a video background<br />
-					designed by <a href="https://templated.co/">TEMPLATED</a> and released under the Creative Commons License.</p>
+					<h1>"Developer"</h1>
+					<p>Some call me a coder, but really I just cosplay as a developer.<br />
+					People think Go (Golang) is my preferred language, but nothing beats the dotnet ecosystem.</p>
 				</div>
 				<video autoplay loop muted playsinline src="images/banner.mp4"></video>
 			</section>
@@ -46,8 +46,8 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Sem turpis amet semper</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>People say I am the best (coding) boss</h2>
+						<p>When I'm not writing some bomb-ass C# code in the greatest IDE of all time, Visual Studio, you can find me shitposting on every Kubernetes Discord I haven't been banned on</p>
 					</header>
 					<div class="highlights">
 						<section>
@@ -56,7 +56,9 @@
 									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
 									<h3>Feugiat consequat</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>Besides C#, I'm a *huge* fan of Racket. I think there is so much untapped potential in offensive security tooling written in Racket <br/>
+                  Compiled languages are a thing of the past, interpreted language payloads are the new hotness. All of the ATPs are moving towards packaged Python scripts wrapped into executables.
+                </p>
 							</div>
 						</section>
 						<section>
@@ -65,7 +67,7 @@
 									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
 									<h3>Ante sem integer</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>If you want to hit me up, don't be shy! I love receiving a "hey", "ping", or if you're feeling super adventureous, send me a "SYN" and I'll nerd back on you with a fresh "SYN-ACK"!</p>
 							</div>
 						</section>
 						<section>
