--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a class="logo" href="index.html">Industrious</a>
+				<a class="logo" href="index.html">I <3 C# </a>
 				<nav>
 					<a href="#menu">Menu</a>
 				</nav>
@@ -54,7 +54,7 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-vcard-o"><span class="label">Icon</span></a>
-									<h3>Feugiat consequat</h3>
+									<h3>About me</h3>
 								</header>
 								<p>Besides C#, I'm a *huge* fan of Racket. I think there is so much untapped potential in offensive security tooling written in Racket <br/>
                   Compiled languages are a thing of the past, interpreted language payloads are the new hotness. All of the ATPs are moving towards packaged Python scripts wrapped into executables.
@@ -65,7 +65,7 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-files-o"><span class="label">Icon</span></a>
-									<h3>Ante sem integer</h3>
+									<h3>Let's Connect!</h3>
 								</header>
 								<p>If you want to hit me up, don't be shy! I love receiving a "hey", "ping", or if you're feeling super adventureous, send me a "SYN" and I'll nerd back on you with a fresh "SYN-ACK"!</p>
 							</div>
@@ -189,15 +189,14 @@
 						<section>
 							<h4>Magna sed ipsum</h4>
 							<ul class="plain">
-								<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-								<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
-								<li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li>
-								<li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li>
+								<li><a href="https://twitter.com/kulinacs"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
+								<li><a href="https://www.linkedin.com/in/nicklausmcclendon/"><i class="icon fa-linkedin">&nbsp;</i>Facebook</a></li>
+								<li><a href="https://github.com/kulinacs"><i class="icon fa-github">&nbsp;</i>Github</a></li>
 							</ul>
 						</section>
 					</div>
 					<div class="copyright">
-						&copy; Untitled. Photos <a href="https://unsplash.co">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
+						&copy; Kulinacs "Developer" Services LLC Esquire 2022 <a href="https://domburf.medium.com/im-turning-into-a-microsoft-fanboy-399d73fb992d">Unsplash</a>, Video <a href="https://coverr.co">Coverr</a>.
 					</div>
 				</div>
 			</footer>
