--- a/src/index.html
+++ b/src/index.html
@@ -74,9 +74,9 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-									<h3>Ipsum consequat</h3>
+									<h3>???</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p>What is that symbol above this text??? My dad chuckled when he saw it, so I'm guessing it must be a boomer thing. I'll ask my friend Dan what it means later.</p>
 							</div>
 						</section>
 						<section>
