--- a/src/index.html
+++ b/src/index.html
@@ -83,18 +83,18 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
-									<h3>Interdum gravida</h3>
+									<h3>When that Assembly.Load hits logonpasswords</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<picture> <source srcset="images/happy.png"  media="(min-width: 300px)"><img src="images/happy.png" /></picture>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<header>
-									<a href="#" class="icon fa-paper-plane-o"><span class="label">Icon</span></a>
-									<h3>Faucibus consequat</h3>
+									<a href="#" class="icon fa-paper-plane-o"><span class="label">C# Malware Development</span></a>
+									<h3>When AMSI breaks Assembly.Load</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<picture> <source srcset="images/sad.png"  media="(min-width: 300px)"><img src="images/sad.png" /></picture>
 							</div>
 						</section>
 						<section>
@@ -103,7 +103,7 @@
 									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
 									<h3>Accumsan viverra</h3>
 								</header>
-								<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+								<p></p>
 							</div>
 						</section>
 					</div>
@@ -113,8 +113,9 @@
 		<!-- CTA -->
 			<section id="cta" class="wrapper">
 				<div class="inner">
-					<h2>Curabitur ullamcorper ultricies</h2>
-					<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing. Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing sed feugiat eu faucibus. Integer ac sed amet praesent. Nunc lacinia ante nunc ac gravida.</p>
+					<h2>C# Malware Development</h2>
+					<p>The best malware currently being written is done in C#. People think Go is better, but they're completely wrong! Goroutines are inefficient and prone to bugs. <br/>
+          Everyone loves Go's cross-compilation but C# dotnet core is also cross-platform and way more efficient! C# binaries aren't bloated like those 30MB Go malware binaries</p>
 				</div>
 			</section>
 
