--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
 									<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
 									<h3>When that Assembly.Load hits logonpasswords</h3>
 								</header>
-								<picture> <source srcset="images/happy.png"  media="(min-width: 300px)"><img src="images/happy.png" /></picture>
+								<picture> <source srcset="images/happy.png"  media="(min-width: 150px)"><img src="images/happy.png" /></picture>
 							</div>
 						</section>
 						<section>
@@ -94,7 +94,7 @@
 									<a href="#" class="icon fa-paper-plane-o"><span class="label">C# Malware Development</span></a>
 									<h3>When AMSI breaks Assembly.Load</h3>
 								</header>
-								<picture> <source srcset="images/sad.png"  media="(min-width: 300px)"><img src="images/sad.png" /></picture>
+								<picture> <source srcset="images/sad.png"  media="(min-width: 150px)"><img src="images/sad.png" /></picture>
 							</div>
 						</section>
 						<section>
@@ -123,33 +123,33 @@
 			<section class="wrapper">
 				<div class="inner">
 					<header class="special">
-						<h2>Faucibus consequat lorem</h2>
-						<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+						<h2>Don't Just Take it From Me`</h2>
+						<p>If you're still having doubts about my skills, that's okay! Hear it straight from the testimonials of industry leaders in NFTs, blockchain, and 10x engineers!</p>
 					</header>
 					<div class="testimonials">
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>Kulinacs is a visionary on the development of C#. Nobody understands OOP like he does</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Jane Doe</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Bill Gates</strong> <span>Master of the Universe.</span></p>
 								</div>
 							</div>
 						</section>
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>I was so impressed after watching Kulinacs "develop" a few lines of code that I gifted him a Tesla and a bitcoin!</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>John Doe</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Elon Musk</strong> <span>CEO - Tesla.</span></p>
 								</div>
 							</div>
 						</section>
@@ -191,7 +191,7 @@
 							<h4>Magna sed ipsum</h4>
 							<ul class="plain">
 								<li><a href="https://twitter.com/kulinacs"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-								<li><a href="https://www.linkedin.com/in/nicklausmcclendon/"><i class="icon fa-linkedin">&nbsp;</i>Facebook</a></li>
+								<li><a href="https://www.linkedin.com/in/nicklausmcclendon/"><i class="icon fa-linkedin">&nbsp;</i>LinkedIn</a></li>
 								<li><a href="https://github.com/kulinacs"><i class="icon fa-github">&nbsp;</i>Github</a></li>
 							</ul>
 						</section>
