more pic issues

--- a/src/index.html
+++ b/src/index.html
@@ -101,9 +101,9 @@
 							<div class="content">
 								<header>
 									<a href="#" class="icon fa-qrcode"><span class="label">Icon</span></a>
-									<h3>Accumsan viverra</h3>
+									<h3>Go coders 24/7</h3>
 								</header>
-								<p></p>
+								<picture> <source srcset="images/ohno.png"  media="(min-width: 150px)"><img src="images/ohno.png" /></picture>
 							</div>
 						</section>
 					</div>
