pretty much ready

--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
 								</blockquote>
 								<div class="author">
 									<div class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/billyg.jpg" alt="" />
 									</div>
 									<p class="credit">- <strong>Bill Gates</strong> <span>Master of the Universe.</span></p>
 								</div>
@@ -147,7 +147,7 @@
 								</blockquote>
 								<div class="author">
 									<div class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/elllyo.jpg" alt="" />
 									</div>
 									<p class="credit">- <strong>Elon Musk</strong> <span>CEO - Tesla.</span></p>
 								</div>
@@ -156,13 +156,13 @@
 						<section>
 							<div class="content">
 								<blockquote>
-									<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus.</p>
+									<p>Bro, Kullinacs code be the shizz-wizzle. I gave him my NFTs I was so impressed!</p>
 								</blockquote>
 								<div class="author">
 									<div class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/dbag.jpg" alt="" />
 									</div>
-									<p class="credit">- <strong>Janet Smith</strong> <span>CEO - ABC Inc.</span></p>
+									<p class="credit">- <strong>Logon Paul</strong> <span>The D'ist of D-bags</span></p>
 								</div>
 							</div>
 						</section>
